# ESP32-S3-ePaper-3.97

./: README.md
Arduino/examples/01_Audio_Test/: 01_Audio_Test.ino  music.h
Arduino/examples/02_E-Paper_Example/: 02_E-Paper_Example.ino
Arduino/examples/03_I2C_PCF85063/: 03_I2C_PCF85063.ino  i2c_bsp.h  i2c_equipment.cpp  user_config.h
Arduino/examples/04_I2C_SHTC3/: 04_I2C_SHTC3.ino  GUI_BMPfile.cpp  font12CN.cpp  font24CN.cpp  fonts.h  i2c_bsp.c  i2c_equipment.h
Arduino/examples/05_SD_Test/: 05_SD_Test.ino
Arduino/examples/06_QMI8658A/: 06_QMI8658A.ino  DEV_Config.h
ESP-IDF/01_E-Paper_Example/components/epaper_port/: CMakeLists.txt  ImageData.c  epaper_port.c
ESP-IDF/01_E-Paper_Example/main/: main.c
ESP-IDF/02_Mic_test/: CMakeLists.txt
ESP-IDF/02_Mic_test/components/audio_bsp/: CMakeLists.txt  audio_bsp.c  audio_bsp.h
ESP-IDF/02_Mic_test/components/button_bsp/: CMakeLists.txt  button_bsp.c  button_bsp.h
ESP-IDF/02_Mic_test/components/codec_board/: board_cfg.txt
ESP-IDF/02_Mic_test/main/: main.c
ESP-IDF/03_Music/components/es8311_bsp/: es8311_bsp.c  es8311_bsp.h
ESP-IDF/03_Music/components/i2c_bsp/: i2c_bsp.h
ESP-IDF/03_Music/components/sdcard_bsp/: sdcard_bsp.c  sdcard_bsp.h
ESP-IDF/03_Music/main/: idf_component.yml  main.c
ESP-IDF/04_SD_Test/: partitions.csv
ESP-IDF/04_SD_Test/components/epaper_lib/: GUI_BMPfile.c
ESP-IDF/04_SD_Test/components/epaper_port/: epaper_bsp.c
ESP-IDF/04_SD_Test/main/: idf_component.yml  main.c
ESP-IDF/05_QMI8658A/components/epaper_lib/: GUI_Paint.c
ESP-IDF/05_QMI8658A/components/epaper_port/: ImageData.h  epaper_bsp.h
ESP-IDF/05_QMI8658A/components/i2c_bsp/: i2c_bsp.c
ESP-IDF/05_QMI8658A/main/: CMakeLists.txt  idf_component.yml  main.c
ESP-IDF/06_I2C_PCF85063/main/: main.c
ESP-IDF/07_I2C_SHTC3/main/: main.c
ESP-IDF/08_ESP32-S3_e-Paper-3.97/: CMakeLists.txt  partitions_1.csv  sdkconfig.old
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/: CMakeLists.txt  GUI_BMPfile.c  GUI_Paint.c  GUI_Paint.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/Fonts/: font.c  font.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/Fonts/ASCII/: font182EN.FON
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/Fonts/Font16/: GBK_font16CH_ASICC.FON
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/Fonts/Font18/: GBK_font18CH_ASICC.FON  font18EN.FON
ESP-IDF/08_ESP32-S3_e-Paper-3.97/components/epaper_lib/Fonts/Font24/: GBK_font24CH.FON
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/: CMakeLists.txt  idf_component.yml  main.cc
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/file_browser/: file_browser.cc  file_browser.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_alarm/: page_alarm.cc  page_alarm.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_audio/: page_audio.cc  page_audio.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_clock/: page_clock.cc  page_clock.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_fiction/: page_fiction.cc  page_fiction.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_network/: page_network.cc  page_network.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_settings/: page_settings.cc  page_settings.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_weather/: city_code.txt  page_weather.cc  page_weather.h
ESP-IDF/08_ESP32-S3_e-Paper-3.97/main/page_weather/Weather_img/: Weather.txt
Firmware/: ReadMe_CN.txt  ReadMe_EN.txt
Firmware/Factory procedure/: ReadMe_CN.txt  ReadMe_EN.txt
Firmware/xiaozhi/: ReadMe_CN.txt  ReadMe_EN.txt
(+70 files in other folders)
